Fix spacing of menu items.

--- a/static/css/astrobin.css
+++ b/static/css/astrobin.css
@@ -1020,8 +1020,7 @@ select[multiple]:focus {
 #header #nav ul li a, #header #nav ul li a:visited {
   float: left;
   margin: 0;
-  min-width: 40px;
-  padding: 47px 12px 8px;
+  padding: 47px 16px 8px;
   text-align: center;
   text-transform: lowercase;
 }
